--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,13 @@ body{
 	display: grid;
 	grid-gap: 0px;
 	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(7, auto);
+	grid-template-rows: repeat(8, auto);
 
 	grid-template-areas: "header  header"
 						 "slider slider"
 						 "titulo titulo"
 						 "adopta1 adopta2"
+						 "titulo2 titulo2"
 						 "doctor doctor"	
 						 "sponsor sponsor"
 						 "footer footer";	
@@ -61,7 +62,7 @@ body{
 }
 .contenedor .titulo{
 	grid-area: titulo;
-	background-color: #fff;
+	background-color: #9FCC44;
 	text-align: center;
 }
 .contenedor .titulo h2{
@@ -86,14 +87,67 @@ body{
 	padding: 5px 10px;
 	color: #605B5B;
 }
+
 .contenedor .adopcion2{
 	grid-area: adopta2;
-	background-color: #333;
+	background-color: #fff;
+	display: flex;
+	justify-content: space-between;
 }
-.contenedor .doctor{
-	grid-area: doctor;
-	background-color: #333;
+.contenedor .adopcion2 .carcat h3{
+	font-size: 25px;
+	color: #817E9F;
+	text-transform: uppercase;
+	padding: 5px 10px;
 }
+.contenedor .adopcion2 .carcat p{
+	padding: 5px 10px;
+	color: #605B5B;
+}
+.contenedor .titulo2{
+	grid-area: titulo2;
+	background-color: #9FCC44;
+	text-align: center;
+}
+.contenedor .titulo2 h2{
+	color: #9C9B9B;
+	font-size: 40px;
+	font-weight: 300;
+	padding: 30px 0;
+}
+
+
+.contenedor .vets {
+    grid-area: doctor;
+    display: grid;
+    grid-gap: 0px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "vet1 vet2 vet3";
+    background-color: #333;
+}
+
+.contenedor .vets .vet1{
+	grid-area: vet1;
+	background-color: #fff;
+	display: flex;
+	justify-content: space-between;
+}
+.contenedor .vets .vet2{
+	grid-area: vet2;
+	background-color: #fff;
+	display: flex;
+	justify-content: space-between;
+}
+.contenedor .vets .vet3{
+	grid-area: vet3;
+	background-color: #fff;
+	display: flex;
+	justify-content: space-between;
+}
+
+
+
+
 .contenedor .sponsor{
 	grid-area: sponsor;
 	background-color: #333;
